force-app/main/default/objects/Policy__c/fields/Transaction_GWP__c.field-meta.xml
<CustomField>
    <fullName>Transaction_GWP__c</fullName>
    <label>Transaction Premium</label>
    <summarizedField>Policy_Schedule__c.Transaction_GWP__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Schedule__c.VG_Co_Insurance_type__c</field>
        <operation>notEqual</operation>
        <value>Child</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Schedule__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>