force-app/main/default/objects/Policy__c/fields/Type_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Insurance__c</fullName>
    <inlineHelpText>(Direct or Type or Reinsurance)</inlineHelpText>
    <label>Type of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Facultative Reinsurance</fullName>
            </value>
            <value>
                <fullName>Treaty Reinsurance</fullName>
            </value>
            <value>
                <fullName>Excess of Loss</fullName>
            </value>
            <value>
                <fullName>Non-conventional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>