force-app/main/default/objects/Policy__c/fields/Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Underwriter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Underwriter</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Please select the Underwriter is only Partner user</errorMessage>
        <filterItems>
            <field>User.VG_Underwriter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>