force-app/main/default/objects/Policy__c/fields/VG_Account_Address__c.field-meta.xml
<CustomField>
    <fullName>VG_Account_Address__c</fullName>
    <formula>Insured__r.ShippingStreet+&apos;,&apos; +Insured__r.ShippingCity+ &apos;,&apos;+ Insured__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>