force-app/main/default/objects/Policy__c/fields/VG_Additional_Insureds__c.field-meta.xml
<CustomField>
    <fullName>VG_Additional_Insureds__c</fullName>
    <label>Additional Insureds</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>