force-app/main/default/objects/Policy__c/fields/VG_ADR_Exposure__c.field-meta.xml
<CustomField>
    <fullName>VG_ADR_Exposure__c</fullName>
    <label>ADR Exposure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>