force-app/main/default/objects/Policy__c/fields/VG_ADR_Traded__c.field-meta.xml
<CustomField>
    <fullName>VG_ADR_Traded__c</fullName>
    <label>ADR Traded(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>