force-app/main/default/objects/Policy__c/fields/VG_Aggregate_Limit__c.field-meta.xml
<CustomField>
    <fullName>VG_Aggregate_Limit__c</fullName>
    <label>Aggregate Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>