force-app/main/default/objects/Policy__c/fields/VG_Booked_Time__c.field-meta.xml
<CustomField>
    <fullName>VG_Booked_Time__c</fullName>
    <label>Effective Date of Transaction</label>
    <type>DateTime</type>
</CustomField>