force-app/main/default/objects/Policy__c/fields/VG_Bound_Booked__c.field-meta.xml
<CustomField>
    <fullName>VG_Bound_Booked__c</fullName>
    <label>Bound - Booked (hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>