force-app/main/default/objects/Policy__c/fields/VG_Bound_Time__c.field-meta.xml
<CustomField>
    <fullName>VG_Bound_Time__c</fullName>
    <label>Bound Time</label>
    <type>DateTime</type>
</CustomField>