force-app/main/default/objects/Policy__c/fields/VG_Brokerage_Percent__c.field-meta.xml
<CustomField>
    <fullName>VG_Brokerage_Percent__c</fullName>
    <formula>IF(Gross_Written_Premium__c = 0,0,( VG_Brokerage_Amount__c / Gross_Written_Premium__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>