force-app/main/default/objects/Policy__c/fields/VG_Continuous_Cover_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Continuous_Cover_Date__c</fullName>
    <label>Continuous Cover Date</label>
    <type>Date</type>
</CustomField>