force-app/main/default/objects/Policy__c/fields/VG_Current_Insurer__c.field-meta.xml
<CustomField>
    <fullName>VG_Current_Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Insurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Current Insurer)</relationshipLabel>
    <relationshipName>PoliciesCurrentInsurer</relationshipName>
    <type>Lookup</type>
</CustomField>