force-app/main/default/objects/Policy__c/fields/VG_Deadline__c.field-meta.xml
<CustomField>
    <fullName>VG_Deadline__c</fullName>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>