force-app/main/default/objects/Policy__c/fields/VG_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Expiry_Date__c</fullName>
    <label>Risk Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>