force-app/main/default/objects/Policy__c/fields/VG_Governance_Compliance__c.field-meta.xml
<CustomField>
    <fullName>VG_Governance_Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Governance &amp; Compliance</label>
    <referenceTo>VG_Governance_Compliance__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>