force-app/main/default/objects/Policy__c/fields/VG_Ignore_Validation__c.field-meta.xml
<CustomField>
    <fullName>VG_Ignore_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Validation</label>
    <type>Checkbox</type>
</CustomField>