force-app/main/default/objects/Policy__c/fields/VG_Is_Renewal__c.field-meta.xml
<CustomField>
    <fullName>VG_Is_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Renewal?</label>
    <type>Checkbox</type>
</CustomField>