force-app/main/default/objects/Policy__c/fields/VG_Is_Temp__c.field-meta.xml
<CustomField>
    <fullName>VG_Is_Temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Temp</label>
    <type>Checkbox</type>
</CustomField>