force-app/main/default/objects/Policy__c/fields/VG_IsApproved__c.field-meta.xml
<CustomField>
    <fullName>VG_IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApproved</label>
    <type>Checkbox</type>
</CustomField>