force-app/main/default/objects/Policy__c/fields/VG_Lead_or_Follow__c.field-meta.xml
<CustomField>
    <fullName>VG_Lead_or_Follow__c</fullName>
    <label>Lead or Follow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Follow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>