force-app/main/default/objects/Policy__c/fields/VG_Lloyds_Products__c.field-meta.xml
<CustomField>
    <fullName>VG_Lloyds_Products__c</fullName>
    <label>Lloyds Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>