force-app/main/default/objects/Policy__c/fields/VG_LTA__c.field-meta.xml
<CustomField>
    <fullName>VG_LTA__c</fullName>
    <label>LTA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>