force-app/main/default/objects/Policy__c/fields/VG_LTA_Comments__c.field-meta.xml
<CustomField>
    <fullName>VG_LTA_Comments__c</fullName>
    <label>LTA Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>