force-app/main/default/objects/Policy__c/fields/VG_LTA_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_LTA_Expiry_Date__c</fullName>
    <label>LTA Expiry Date</label>
    <type>Date</type>
</CustomField>