force-app/main/default/objects/Policy__c/fields/VG_Manuscript_Wording__c.field-meta.xml
<CustomField>
    <fullName>VG_Manuscript_Wording__c</fullName>
    <label>Manuscript Wording</label>
    <length>255</length>
    <type>Text</type>
</CustomField>