force-app/main/default/objects/Policy__c/fields/VG_NAIC_Code__c.field-meta.xml
<CustomField>
    <fullName>VG_NAIC_Code__c</fullName>
    <label>NAIC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>