force-app/main/default/objects/Policy__c/fields/VG_Plan_Rate__c.field-meta.xml
<CustomField>
    <fullName>VG_Plan_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Rate</label>
    <referenceTo>VG_Plan_Rate__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>