force-app/main/default/objects/Policy__c/fields/VG_Policy_Currency__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Currency__c</fullName>
    <label>Policy Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AOA</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>BIF</fullName>
            </value>
            <value>
                <fullName>BWP</fullName>
            </value>
            <value>
                <fullName>CDF</fullName>
            </value>
            <value>
                <fullName>CVE</fullName>
            </value>
            <value>
                <fullName>DJF</fullName>
            </value>
            <value>
                <fullName>DKK</fullName>
            </value>
            <value>
                <fullName>DZD</fullName>
            </value>
            <value>
                <fullName>EGP</fullName>
            </value>
            <value>
                <fullName>ERN</fullName>
            </value>
            <value>
                <fullName>ETB</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>GHS</fullName>
            </value>
            <value>
                <fullName>GMD</fullName>
            </value>
            <value>
                <fullName>GNF</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>ISK</fullName>
            </value>
            <value>
                <fullName>KES</fullName>
            </value>
            <value>
                <fullName>KMF</fullName>
            </value>
            <value>
                <fullName>LRD</fullName>
            </value>
            <value>
                <fullName>LSL</fullName>
            </value>
            <value>
                <fullName>LYD</fullName>
            </value>
            <value>
                <fullName>MAD</fullName>
            </value>
            <value>
                <fullName>MGA</fullName>
            </value>
            <value>
                <fullName>MRO</fullName>
            </value>
            <value>
                <fullName>MUR</fullName>
            </value>
            <value>
                <fullName>MWK</fullName>
            </value>
            <value>
                <fullName>MZN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>