force-app/main/default/objects/Policy__c/fields/VG_Programme_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>VG_Programme_Reference_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme Reference Number</label>
    <referenceTo>VG_Programme__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>