force-app/main/default/objects/Policy__c/fields/VG_Prospect_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Prospect_Premium__c</fullName>
    <label>Prospect Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>