force-app/main/default/objects/Policy__c/fields/VG_Quoted_Bound__c.field-meta.xml
<CustomField>
    <fullName>VG_Quoted_Bound__c</fullName>
    <label>Quoted - Bound (hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>