force-app/main/default/objects/Policy__c/fields/VG_Quoted_Time__c.field-meta.xml
<CustomField>
    <fullName>VG_Quoted_Time__c</fullName>
    <label>Quoted Time</label>
    <type>DateTime</type>
</CustomField>