force-app/main/default/objects/Policy__c/fields/VG_ReInsured__c.field-meta.xml
<CustomField>
    <fullName>VG_ReInsured__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReInsured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (ReInsured)</relationshipLabel>
    <relationshipName>Policies2</relationshipName>
    <type>Lookup</type>
</CustomField>