force-app/main/default/objects/Policy__c/fields/VG_Renewal_Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>VG_Renewal_Policy_Id__c</fullName>
    <label>Renewal Policy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>