force-app/main/default/objects/Policy__c/fields/VG_Retroactive_Date_Applicable__c.field-meta.xml
<CustomField>
    <fullName>VG_Retroactive_Date_Applicable__c</fullName>
    <label>Retroactive Date Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>