force-app/main/default/objects/Policy__c/fields/VG_Sub_Broker__c.field-meta.xml
<CustomField>
    <fullName>VG_Sub_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Broker</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Sub-Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Sub-Broker)</relationshipLabel>
    <relationshipName>Policies_Sub_Broker</relationshipName>
    <type>Lookup</type>
</CustomField>