force-app/main/default/objects/Policy__c/fields/VG_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>VG_Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NTU_Or_Declined__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Submission Received</fullName>
            </value>
            <value>
                <fullName>Additional Info Required</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>NTU - Price</fullName>
            </value>
            <value>
                <fullName>NTU - Terms</fullName>
            </value>
            <value>
                <fullName>NTU - Capacity</fullName>
            </value>
            <value>
                <fullName>NTU - Service</fullName>
            </value>
            <value>
                <fullName>NTU - Other</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Approval Rejected</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Decline - Price</fullName>
            </value>
            <value>
                <fullName>Decline - Risk Profile</fullName>
            </value>
            <value>
                <fullName>Decline - Quality of Risk</fullName>
            </value>
            <value>
                <fullName>Decline - Location</fullName>
            </value>
            <value>
                <fullName>Decline - Attachment</fullName>
            </value>
            <value>
                <fullName>Decline - Terms / Wording</fullName>
            </value>
            <value>
                <fullName>Decline - Licensing Restrictions</fullName>
            </value>
            <value>
                <fullName>Decline - Territorial Scope</fullName>
            </value>
            <value>
                <fullName>Decline - Line of Business</fullName>
            </value>
            <value>
                <fullName>Decline - Type of Business e.g Direct vs QS</fullName>
            </value>
            <value>
                <fullName>Decline - Binding Authority Restrictions</fullName>
            </value>
            <value>
                <fullName>Decline - Referall Declined</fullName>
            </value>
            <value>
                <fullName>Decline - Conflict with Volante Capacity Provider</fullName>
            </value>
            <value>
                <fullName>Decline - Aggregation with carrier</fullName>
            </value>
            <value>
                <fullName>Decline - Assured Financials</fullName>
            </value>
            <value>
                <fullName>Decline - Other</fullName>
            </value>
            <value>
                <fullName>Decline - Duplicate</fullName>
            </value>
            <value>
                <fullName>NTU - Renewed with Existing Panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>