force-app/main/default/objects/Policy__c/fields/VG_Surplus_Broker__c.field-meta.xml
<CustomField>
    <fullName>VG_Surplus_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surplus Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Surplus Broker)</relationshipLabel>
    <relationshipName>Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>