force-app/main/default/objects/Policy__c/fields/VG_Territorial_Limits__c.field-meta.xml
<CustomField>
    <fullName>VG_Territorial_Limits__c</fullName>
    <label>Territorial Limits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>Iceland</fullName>
            </value>
            <value>
                <fullName>Nordic</fullName>
            </value>
            <value>
                <fullName>Norway</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>World wide excluding North America</fullName>
            </value>
            <value>
                <fullName>World wide excluding North America but including business trips and trade shows world wide</fullName>
            </value>
            <value>
                <fullName>WW</fullName>
            </value>
            <value>
                <fullName>WW ex USA/Canada</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Benin</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Burkina Faso</fullName>
            </value>
            <value>
                <fullName>Burundi</fullName>
            </value>
            <value>
                <fullName>Cameroon</fullName>
            </value>
            <value>
                <fullName>Cape Verde</fullName>
            </value>
            <value>
                <fullName>Central African Republic</fullName>
            </value>
            <value>
                <fullName>Chad</fullName>
            </value>
            <value>
                <fullName>Comoros</fullName>
            </value>
            <value>
                <fullName>Republic of the Congo</fullName>
            </value>
            <value>
                <fullName>Democratic Republic of the Congo</fullName>
            </value>
            <value>
                <fullName>Djibouti</fullName>
            </value>
            <value>
                <fullName>Egypt</fullName>
            </value>
            <value>
                <fullName>Equatorial Guinea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>