force-app/main/default/objects/Policy__c/fields/VG_Terrorism_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Terrorism_Acceptance_Date__c</fullName>
    <label>Terrorism Acceptance Date</label>
    <type>Date</type>
</CustomField>