force-app/main/default/objects/Policy__c/fields/VG_US_Classification__c.field-meta.xml
<CustomField>
    <fullName>VG_US_Classification__c</fullName>
    <label>US Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Surplus Lines</fullName>
            </value>
            <value>
                <fullName>US Reinsurance</fullName>
            </value>
            <value>
                <fullName>Illinois Licensed</fullName>
            </value>
            <value>
                <fullName>Kentucky Licensed</fullName>
            </value>
            <value>
                <fullName>USVI Licensed (US Virgin Islands)</fullName>
            </value>
            <value>
                <fullName>Non-Regulated</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>