force-app/main/default/objects/Policy__c/fields/VG_Volante_Entities__c.field-meta.xml
<CustomField>
    <fullName>VG_Volante_Entities__c</fullName>
    <label>Volante Entities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HEAG</fullName>
            </value>
            <value>
                <fullName>VCL</fullName>
            </value>
            <value>
                <fullName>VEML</fullName>
            </value>
            <value>
                <fullName>VIL</fullName>
                <default>true</default>
                <label>VIL</label>
            </value>
            <value>
                <fullName>VSR LLC</fullName>
            </value>
            <value>
                <fullName>VTSL</fullName>
            </value>
            <value>
                <fullName>BUAB</fullName>
            </value>
            <value>
                <fullName>VG UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>