force-app/main/default/objects/Policy__c/fields/VG_Wording__c.field-meta.xml
<CustomField>
    <fullName>VG_Wording__c</fullName>
    <label>Wording</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Risks Commercial Property Insurance – BBP 2.0</fullName>
            </value>
            <value>
                <fullName>All Risks Insurance for Construction Activities – BBCAR 2.0</fullName>
            </value>
            <value>
                <fullName>Public and Products Liability Insurance – BBLI 2.0</fullName>
            </value>
            <value>
                <fullName>Directors and Officers Liability Insurance BBDO 2.0</fullName>
            </value>
            <value>
                <fullName>Commercial Crime Insurance – BBC 2.0</fullName>
            </value>
            <value>
                <fullName>Life Science Liability Insurance – BBLS 2.0</fullName>
            </value>
            <value>
                <fullName>Clinical Trials Liability Insurance – BBCT 2.0</fullName>
            </value>
            <value>
                <fullName>Professional Indemnity for Financial Institutions-BBFIPI 2.0</fullName>
            </value>
            <value>
                <fullName>Crime Insurance for Financial Institutions – BBFIC 2.0</fullName>
            </value>
            <value>
                <fullName>Prospectus Liability Insurance – BBPL – 2.0</fullName>
            </value>
            <value>
                <fullName>Legal Expenses Insurance – BBLE 2.0</fullName>
            </value>
            <value>
                <fullName>Architects and Engineers</fullName>
            </value>
            <value>
                <fullName>Surveyors</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Design and Construct</fullName>
            </value>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Insurance Brokers</fullName>
            </value>
            <value>
                <fullName>MGA</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Professional Indemnity Insurance BBPI 2.0</fullName>
            </value>
            <value>
                <fullName>BBG 2.2 - General Conditions and Definitions</fullName>
            </value>
            <value>
                <fullName>Professional Indemnity Insurance for Financial Institutions  - BBFIPI 2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>