force-app/main/default/objects/Policy__c/recordTypes/Bridge.recordType-meta.xml
<RecordType>
    <fullName>Bridge</fullName>
    <active>true</active>
    <label>Bridge</label>
</RecordType>